--- a/index.html
+++ b/index.html
@@ -15,66 +15,89 @@
     button { padding:8px 12px; border-radius:8px; border:none; background:var(--accent); color:#fff; cursor:pointer; }
     button:hover { background:var(--accent-dark); }
 
+    /* طبقة شفافة خلف القائمة الجانبية */
+    #sideMenuOverlay {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.18);
+      z-index: 1199;
+    }
+    #sideMenuOverlay.active {
+      display: block;
+    }
+
     /* Top bar */
     #topBar { display:none; align-items:center; justify-content:space-between; gap:12px; padding:12px; border-radius:10px; background: linear-gradient(90deg,#2980b9,#6dd5fa); color:#fff; margin-bottom:12px; }
     #topBar img { width:40px; height:40px; border-radius:50%; object-fit:cover; border:2px solid rgba(255,255,255,0.2); }
     #topBar .balance-badge { background:gold; color:#222; padding:6px 12px; border-radius:20px; font-weight:bold; }
 
-    /* Panels */
     #authPanel, #userPanel { background:#fff; padding:16px; border-radius:10px; box-shadow:0 4px 16px rgba(0,0,0,0.05); margin-bottom:12px; max-width:1100px; margin-left:auto; margin-right:auto; width:100%; }
 
-    /* Products grid */
     #productList { display:grid; grid-template-columns: repeat(auto-fill, minmax(220px,1fr)); gap:18px; margin-top:12px; align-items:start; }
-    .product { background:#fff; padding:12px; border-radius:12px; box-shadow: 0 6px 18px rgba(27,31,35,0.04); text-align:center; transition:transform .18s ease, box-shadow .18s ease; }
+    .product { background:#fff; padding:12px; border-radius:12px; box-shadow: 0 6px 18px rgba(27,31,35,0.04); text-align:center; transition:transform .18s ease, box-shadow .18s ease; word-break:break-word; }
     .product:hover { transform: translateY(-6px); box-shadow: 0 10px 30px rgba(27,31,35,0.08); }
     .product img { width:100%; height:150px; object-fit:cover; border-radius:8px; margin-bottom:8px; }
 
-    /* Side menu */
-    #sideMenu { position:fixed; top:0; right:-300px; width:300px; height:100vh; background:#fff; box-shadow:-8px 0 30px rgba(0,0,0,0.08); padding:18px; z-index:1200; transition: right .32s ease; border-left:1px solid #f0f0f0; display:none; }
+    /* القائمة الجانبية */
+    #sideMenu {
+      position:fixed; top:0; right:-300px; width:300px; height:100vh; background:#fff;
+      box-shadow:-8px 0 30px rgba(0,0,0,0.08); padding:18px; z-index:1200;
+      transition: right .32s ease; border-left:1px solid #f0f0f0; display:none;
+      overflow-y: auto;
+    }
     #sideMenu.active { right:0; display:block; }
-    #closeMenu { cursor:pointer; text-align:left; font-size:20px; margin-bottom:6px; }
+    #closeMenu {
+      cursor:pointer; text-align:left; font-size:24px; margin-bottom:6px;
+      position: sticky; top:0; right:0; background:#fff; z-index:2;
+      padding:6px 0; display:block;
+    }
     #sideProfile img { width:84px; height:84px; border-radius:50%; object-fit:cover; border:3px solid var(--accent); }
 
-    /* Modal (search) - أعلى z-index لكي يظهر فوق admin modal */
+    /* Modal (search) */
     #modal { 
-      display:none; 
-      position:fixed; 
-      inset:0; 
-      background: rgba(0,0,0,0.55); 
-      z-index:1400; /* أعلى */
-      align-items:center; 
-      justify-content:center; 
-      padding:16px; 
+      display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55); z-index:1400; align-items:center; justify-content:center; padding:16px; 
     }
     #modalContent { background:#fff; padding:18px; border-radius:10px; width:100%; max-width:420px; text-align:center; box-shadow: 0 12px 40px rgba(0,0,0,0.16); }
     .loader { border:6px solid #f3f3f3; border-top:6px solid var(--accent); border-radius:50%; width:40px; height:40px; margin:14px auto; animation:spin 1s linear infinite; }
     @keyframes spin { to { transform:rotate(360deg); } }
 
-    /* Admin modal (أدنى z-index) */
-    #adminModal { 
-      display:none; 
-      position:fixed; 
-      inset:0; 
-      background: rgba(0,0,0,0.55); 
-      z-index:1350; /* أقل من modal */
-      align-items:center; 
-      justify-content:center; 
-      padding:16px; 
-    }
+    #adminModal { display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55); z-index:1350; align-items:center; justify-content:center; padding:16px; }
     #adminModalContent { background:#fff; padding:18px; border-radius:10px; width:100%; max-width:520px; text-align:center; box-shadow: 0 12px 40px rgba(0,0,0,0.16); }
 
+    @media (max-width:900px) {
+      #authPanel, #userPanel { max-width:98vw; padding:9px; }
+      #adminModalContent, #modalContent { max-width:99vw; }
+    }
     @media (max-width:720px) {
-      #sideMenu { width:100%; right:-100%; }
-      #productList { grid-template-columns: repeat(auto-fill, minmax(160px,1fr)); }
-      #topBar { border-radius:0; }
-      body { padding:8px; }
+      body { padding:5px; }
+      #sideMenu { width:55vw; min-width:180px; max-width:350px; right:-55vw; border-radius:8px; }
+      #sideMenu.active { right:0; }
+      #productList { grid-template-columns: repeat(auto-fill, minmax(160px,1fr)); gap:8px; }
+      #topBar { border-radius:0; flex-direction:column; gap:10px; }
+      #adminModalContent, #modalContent { padding:8px; }
+      .product img { height:100px; }
+      .product { padding:7px; font-size:13px; }
+    }
+    @media (max-width:480px) {
+      h1 { font-size:1.3em; }
+      #productList { grid-template-columns: repeat(auto-fill, minmax(120px,1fr)); }
+      .product img { height:68px; }
+      .product { font-size:12px; }
+      #sideProfile img { width:60px; height:60px; }
+      #sideMenu { padding:10px; }
+    }
+    @media (max-width:420px) {
+      ul { font-size:13px; }
+      #adminModalContent, #modalContent { padding:5px; }
+      #sideMenu { width:80vw; min-width:140px; max-width:96vw; right:-80vw; }
     }
   </style>
 </head>
 <body>
 
   <h1 style="text-align:center;">متجر العملات الافتراضية</h1>
-
+  <div id="sideMenuOverlay"></div>
   <!-- Top bar -->
   <div id="topBar" aria-hidden="true">
     <div style="display:flex;align-items:center;gap:12px;">
@@ -89,7 +112,6 @@
         <div style="font-size:13px;color:rgba(255,255,255,0.9);margin-top:4px;">كود: <span id="topProfileCode">------</span></div>
       </div>
     </div>
-
     <div style="display:flex;align-items:center;gap:12px;">
       <div class="balance-badge">الرصيد: <span id="displayBalance">0.00</span>$</div>
       <button id="logoutBtn" title="تسجيل الخروج">تسجيل الخروج</button>
@@ -106,9 +128,7 @@
       <button id="loginBtn">تسجيل الدخول</button>
       <button id="clearAuthFieldsBtn" style="background:#ccc;color:#111;">مسح الحقول</button>
     </div>
-
     <hr style="margin:12px 0;">
-
     <h2>إنشاء حساب جديد</h2>
     <input id="registerEmail" type="email" placeholder="البريد الإلكتروني">
     <input id="registerPassword" type="password" placeholder="كلمة المرور">
@@ -117,7 +137,7 @@
     </div>
   </div>
 
-  <!-- User panel (shown after login) -->
+  <!-- User panel -->
   <div id="userPanel" style="display:none;">
     <section style="margin-top:16px;">
       <h3>المنتجات المتاحة</h3>
@@ -134,7 +154,6 @@
       <p id="sideProfileEmail">email@example.com</p>
       <p id="sideProfileCode">------</p>
     </div>
-
     <hr style="margin:12px 0;">
     <ul style="padding:0;list-style:none;">
       <li style="margin:8px 0;"><a href="#" id="sideHome">الرئيسية</a></li>
@@ -158,20 +177,18 @@
     </div>
   </div>
 
-  <!-- Generic modal (search results / messages) -->
+  <!-- Generic modal -->
   <div id="modal"><div id="modalContent"></div></div>
 
-  <!-- Admin Modal (panel moved to modal) -->
+  <!-- Admin Modal -->
   <div id="adminModal">
     <div id="adminModalContent">
       <h3>لوحة المسؤول</h3>
       <p id="adminBalance">رصيد المسؤول: 0.00$</p>
-
       <div style="display:flex;gap:8px;flex-wrap:wrap; margin-bottom:10px;">
         <input id="searchInput" type="text" placeholder="البريد الإلكتروني أو كود الشحن">
         <button id="searchBtnModal">بحث</button>
       </div>
-
       <h3 style="margin-top:8px;">نشر منتج (للمسؤول فقط)</h3>
       <input id="productName" type="text" placeholder="اسم المنتج (مثال: 60 شدة ببجي)">
       <input id="productPrice" type="number" step="0.01" placeholder="السعر (مثال: 3.00)">
@@ -185,13 +202,11 @@
     </div>
   </div>
 
-  <!-- Firebase + App script -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
     import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
     import { getFirestore, doc, setDoc, getDoc, updateDoc, collection, query, where, getDocs } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
 
-    // ====== إعدادات Firebase ======
     const firebaseConfig = {
       apiKey: "AIzaSyDPcyxpHRuLx9T2CO4LJ-n9jaqAynUjvqw",
       authDomain: "xix5-a119a.firebaseapp.com",
@@ -201,12 +216,10 @@
       appId: "1:332265425367:web:0a95e71d8bd0058503a392",
       measurementId: "G-RLK4PXMV7P"
     };
-
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    // Helpers
     const el = id => document.getElementById(id);
     function safeSetText(id, text){ const e=el(id); if(e) e.textContent = text; }
     function safeSetHTML(id, html){ const e=el(id); if(e) e.innerHTML = html; }
@@ -219,7 +232,6 @@
       return code;
     }
 
-    // Auth
     async function login(email, password) {
       try {
         if (!email || !password) return alert("الرجاء إدخال البريد وكلمة المرور.");
@@ -268,7 +280,6 @@
         safeSetText("sideProfileEmail", data.email || "");
         safeSetText("sideProfileCode", data.code || "------");
 
-        // show admin entry only for admin email
         const adminBtn = el("adminBtn");
         if (email === "uusu.06@gmail.com") {
           if (adminBtn) adminBtn.style.display = "block";
@@ -311,7 +322,6 @@
       };
     }
 
-    // Publish product (admin only) — price decimals + quantity text
     async function publishProduct() {
       try {
         if (!auth.currentUser || auth.currentUser.email !== "uusu.06@gmail.com") {
@@ -331,7 +341,7 @@
         await setDoc(doc(db, "products", Date.now().toString()), {
           name,
           price,
-          quantity,   // نص مثل: "60 شدة"
+          quantity,
           image: imageUrl,
           createdAt: new Date()
         });
@@ -348,7 +358,6 @@
       }
     }
 
-    // Load products and render — Name, price, quantity, image
     async function loadProducts() {
       try {
         const productsCol = collection(db, "products");
@@ -404,7 +413,6 @@
       }
     }
 
-    // Buy product: deduct price only, show quantity in confirmation
     async function buyProduct(productId, price, productName, quantity) {
       try {
         if (!auth.currentUser) return alert("يرجى تسجيل الدخول للشراء.");
@@ -431,7 +439,6 @@
       }
     }
 
-    // Search user (admin) and show modal with profile + charge option — amounts in cents
     async function searchUser(identifier) {
       try {
         const modal = el("modal");
@@ -510,7 +517,6 @@
       }
     }
 
-    // Admin modal open/close
     function openAdminPanel() {
       const adminModal = el("adminModal");
       if (!adminModal) return;
@@ -534,16 +540,32 @@
       el("publishBtn")?.addEventListener("click", publishProduct);
       el("closeAdminBtn")?.addEventListener("click", closeAdminPanel);
 
-      // side menu toggle (إزالة الشريط الأبيض بعد الإغلاق)
+      // القائمة الجانبية مع الطبقة الشفافة
       const sideMenu = el("sideMenu");
-      el("menuBtn")?.addEventListener("click", ()=> { if(sideMenu){ sideMenu.style.display="block"; requestAnimationFrame(()=> sideMenu.classList.add("active")); }});
-      el("closeMenu")?.addEventListener("click", ()=> {
+      const overlay = el("sideMenuOverlay");
+      el("menuBtn")?.addEventListener("click", ()=>{
+        if(sideMenu){
+          sideMenu.style.display="block";
+          requestAnimationFrame(()=> sideMenu.classList.add("active"));
+        }
+        if(overlay){
+          overlay.classList.add("active");
+        }
+      });
+      el("closeMenu")?.addEventListener("click", ()=>{
         if(sideMenu){
           sideMenu.classList.remove("active");
           setTimeout(()=>{ sideMenu.style.display="none"; }, 340);
         }
+        if(overlay){
+          overlay.classList.remove("active");
+        }
       });
-
+      if(overlay){
+        overlay.addEventListener("click", ()=>{
+          el("closeMenu").click(); // إغلاق القائمة عند الضغط خارجها
+        });
+      }
       // edit profile modal handlers
       const profileImg = el("sideProfileImg");
       const editProfileModal = el("editProfileModal");
@@ -570,7 +592,6 @@
       initEditName();
     }
 
-    // Auth state monitoring
     onAuthStateChanged(auth, async (user) => {
       const authPanel = el("authPanel");
       const userPanel = el("userPanel");
@@ -590,7 +611,6 @@
 
     window.addEventListener("DOMContentLoaded", () => {
       initUI();
-      // expose functions globally
       window.openAdminPanel = openAdminPanel;
       window.closeAdminPanel = closeAdminPanel;
       window.publishProduct = publishProduct;
@@ -600,6 +620,5 @@
       window.logout = logout;
     });
   </script>
-
 </body>
 </html>
